--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="h-screen bg-gray-50"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
